fix speech notes

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -20,11 +20,11 @@
 	</div>
 
 	<aside class="notes">
-		We should all know the pain of debugging typos in selectors? This is something that happens a lot !<br>
-		particularly with weird words like 'grey'<br>
-		So, when you’re writing selectors,<br><strong>NEXT</strong>
-		<strong>Grammar proof your selectors ! like inuit.css</strong><br>
-		Now it's ok if a developer misspells the 'gray' class
+		We all know the pain of debugging typos in selectors<br>
+		This happens amazingly frequently!  particularly with strange words like 'grey'<br>
+		So, when you’re writing selectors,<strong style="color:green"> [NEXT]</strong><br>
+		<strong>Grammar proof your selectors ! like Inuit</strong><br>
+		And now it's ok if a developer misspells the 'gray' class
 	</aside>
 </section>
 
