--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		5. Document inline<br>
-		And as our code gets more advanced, this becomes more and more important<br>
+		And as our code gets more complex, this is more and more important<br>
 	</aside>
 </section>
 
@@ -24,9 +24,9 @@
 	</div>
 
 	<aside class="notes">
-		CSS is notorious for bad comments, like pointing out the obvious<strong>NEXT</strong><br>
-		or general lack of commenting or bad naming conventions<strong>NEXT</strong><br>
-		or comments that are starting to be helpful but don't convey any semantics<strong>NEXT</strong><br>
+		CSS is notorious for comments that point out the obvious<strong  style="color:green"> [NEXT]</strong><br>
+		or a general lack of commenting and bad naming conventions<strong  style="color:green"> [NEXT]</strong><br>
+		or comments that are starting to be helpful but don't convey any semantics<strong  style="color:green"> [NEXT]</strong><br>
 	</aside>
 </section>
 
@@ -37,9 +37,9 @@
 	</div>
 
 	<aside class="notes">
-		Bootstrap have particularly good commenting<br>
-		They explain things that we need to know like that a value IS deliberately unitless<br>
-		and how what appear to be random values are evaluated
+		Bootstrap have <em>particularly</em> good commenting<br>
+		They explain things that we need to know like the value IS <em>intentionally unitless</em><br>
+		and how the values was evaluated
 	</aside>
 </section>
 
@@ -49,7 +49,7 @@
 	</div>
 
 	<aside class="notes">
-		Inuit use html samples in their doc-blocks to explain some of the semantics of the classes
+		Inuit use html snippets in their doc-blocks to explain some of the semantics of classes
 	</aside>
 </section>
 
@@ -59,7 +59,7 @@
 	</div>
 
 	<aside class="notes">
-		He also draws pictures to convey information if that can be useful,<br>
+		Inuit also draws pictures to convey useful information<br>
 		so we should too
 	</aside>
 </section>
