--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -21,13 +21,14 @@
 
 
 	<aside class="notes">
-		Another thing that annoyed me about Sass was the unorganised key value mess that the config.scss file becomes<br>
-		This is especially annoying if you want to use helper functions inside your config file, but they're not defined yet.<br>
-		I wanted to write Sass configs with an Object like how we might do in JavaScript <br>
-
-		Well in Sass 3.3 you can <strong>NEXT</strong>. We have now have maps, which are Objects.<br>
-		This is how Toolkit define their config settings<br>
-		And now that we’ve got an Object to organise the configuration values, <strong>NEXT</strong><br>
+		Another thing that annoyed me about Sass<br>
+		was the unorganised key-value mess that the config file becomes<br>
+		<br>
+		I wanted to write Sass configs with an Object syntax like we might do in JavaScript <br>
+		<br>
+		Well <strong><u>you can</u> use objects for configs like Toolkit do</strong> <strong  style="color:green"> [NEXT]</strong><br>
+		in Sass 3.3 we have maps, which are Objects.<br>
+		And now that our config is an Object <strong  style="color:green"> [NEXT]</strong><br>
 	</aside>
 
 
@@ -52,9 +53,7 @@
 	</div>
 
 	<aside class="notes">
-		we can create getter and setter methods to read and write to them<br>
-		This just feels much better<br>
-		and now we have a handle to that action, so we can customise the get and set methods however we like
+		we can create getter and setter methods to read and write to them just like Toolkit do<br>
 	</aside>
 </section>
 
