--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -1,5 +1,9 @@
 <section>
 	<h1><span class="sol-yellow">7.</span> Use a debug flag.</h1>
+
+	<aside class="notes">
+		7. Use a debug flag.
+	</aside>
 </section>
 
 <section>
@@ -20,11 +24,14 @@
 	</div>
 
 	<aside class="notes">
-		Inuit have a file called debug.scss and by setting "debug-mode" to true, it paints useful things in the browser<br>
-		like outlining elements without alt tags<br>
-		So we could use a debug concept in our code<strong>NEXT</strong>
-		Maybe it would be useful to add borders or background colors to layout elements?<br>
-		we can do things like using the ternary function to add a border if debug is true, or ignore if debug is false
+		Inuit a variable called $debug-mode and by setting this to true,<br>
+		It executes the contents of a file called debug<br>
+		the file is used to paint useful things in browser like outlining elements without alt tags<br>
+		<br>
+		<br>
+		So we could use a debug concept in our code as well<strong  style="color:green"> [NEXT]</strong>
+		Maybe it would be a useful way of debugging layout elements<br>
+		You could use it in a ternary function for example
 	</aside>
 
 </section>
