--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -1,5 +1,9 @@
 <section>
 	<h1><span class="sol-yellow inline-block">8.</span> <span class="inline-block">Format your mixin parameters<br>so they are <em>easy</em> to read.</span></h1>
+
+	<aside class="notes">
+		8. Format your mixin parameters so they are easy to read.
+	</aside>
 </section>
 
 
@@ -17,8 +21,9 @@
 	</div>
 
 	<aside class="notes">
-		Don't write mixin parameters in a line<br>
-		and use plenty of space between them <strong>NEXT</strong> so people can quickly read them<br>
+		Don't write mixin parameters on one line<br>
+		and use plenty of space between them <strong  style="color:green"> [NEXT]</strong><br>
+		so people can quickly read them<br>
 		like Compass do.
 	</aside>
 </section>
