--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -29,9 +29,8 @@
 
 
 	<aside class="notes">
-		Something much less annoying, but something always felt wrong about repeating the @import directive.<strong>NEXT</strong><br>
-		It feels much more natural to chain the import, like how you chain JavaScript variables,<strong>NEXT</strong><br>
-		well it turns out you can, Foundation do this<br>
-		<strong>You can chain import statements !</strong>
+		Something always felt wrong about repeating the @import directive.<strong  style="color:green"> [NEXT]</strong><br>
+		We chain JavaScript variables, so why can't we chain import statements? <strong  style="color:green"> [NEXT]</strong><br>
+		well it turns out <strong>you can chain import statements !</strong>, Foundation do this<br>
 	</aside>
 </section>
