--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -3,12 +3,12 @@
 
 	<aside class="notes">
 		4. Use lots of Sass Partials.<br>
-		This is something I think goes without saying. But so many developers just don't do this.
+		This is something that goes without saying. But so many developers just don't do this.
 	</aside>
 </section>
 
 <section>
-	<h1 class="fragment" data-fragment-index="5">Use lots of Sass Partials.</h1>
+	<h1 class="fragment" data-fragment-index="3">Use lots of Sass Partials.</h1>
 
 	<div class="each-columns--random">
 
@@ -28,11 +28,11 @@
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-bourbon.jpg" height="515" width="310">
 		</div>
 
-		<div class="each inuit fragment" data-fragment-index="5">
+		<div class="each inuit fragment" data-fragment-index="3">
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="515" width="310">
 		</div>
 
-		<div class="each toolkit fragment" data-fragment-index="4">
+		<div class="each toolkit fragment" data-fragment-index="3">
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-toolkit.jpg" height="515" width="310">
 		</div>
 
@@ -40,10 +40,10 @@
 
 
 	<aside class="notes">
-		Foundation do<strong>NEXT</strong><br>
-		Bootstrap do<strong>NEXT</strong><br>
-		Compass does<strong>NEXT</strong><br>
-		Actually everyone does, so we should too<strong>NEXT</strong><br>
+		Foundation do<strong  style="color:green"> [NEXT]</strong><br>
+		Bootstrap do<strong  style="color:green"> [NEXT]</strong><br>
+		Compass does<strong  style="color:green"> [NEXT]</strong><br>
+		Actually everyone does, so we should too<strong  style="color:green"> [NEXT]</strong><br>
 	</aside>
 
 </section>
