--- a/src/templates/slides/twenty-one.hbs
+++ b/src/templates/slides/twenty-one.hbs
@@ -4,3 +4,8 @@
 	<p><a href="mailto:elise.chant@gmail.com">elise.chant@gmail.com</a></p>
 	<p><a href="http://twitter.com/elisechant">@elisechant</a></p>
 </address>
+
+
+<aside class="notes">
+	Ok, thanks very much.
+</aside>
