--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">10½. </span> Don't be too serious.</h1>
 
 	<aside class="notes">
-		Don't forget we're CSS devs, we don't have to be too serious,
+		10 and a half. Dont be too serious.
 	</aside>
 </section>
 
@@ -22,7 +22,7 @@
 
 
 	<aside class="notes">
-		So remember sometimes to have fun. <br>
+		At the end of the day, we're CSS devs and we still like to have fun<strong style="color:green"> [NEXT]</strong><br><br>
 		And remember that most things get stripped out in the compile so you probably wont get fired.
 	</aside>
 </section>
