--- a/src/templates/slides/twenty.hbs
+++ b/src/templates/slides/twenty.hbs
@@ -1,5 +1,9 @@
 <section>
 	<h1><span class="sol-yellow">10.</span> Throw errors.</h1>
+
+	<aside class="notes">
+		10. Throw errors
+	</aside>
 </section>
 
 <section>
@@ -18,8 +22,9 @@
 	</div>
 
 	<aside class="notes">
-		Bourbon use errors to give deprecating warnings<br>
-		Sassy-math use errors to emit type warnings and then use @return false to exit the function.
+		Bourbon use errors to give deprecating warnings<br><br>
+		Sassy-math use errors to emit type warnings <br>
+		and then use a @return false to exit the function.
 	</aside>
 
 </section>
