--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">9.</span> Guard arguments</h1>
 
 	<aside class="notes">
-		If you code is going to be reusable, you should be <br>
+		If you code is going to be reusable, you need to be <br>
 		Guarding your arguments
 	</aside>
 </section>
@@ -17,8 +17,8 @@
 	</div>
 
 	<aside class="notes">
-		Check for empty argument with the length function,<br>
-		then you can do something like setting a default value or emitting a warning
+		you can check for empty arguments with the length function like Toolkit do,<br>
+		then you might do something like setting a default value for this condition or emitting a warning
 	</aside>
 </section>
 
@@ -39,7 +39,7 @@
 
 
 <section>
-	<h1>.. guard argument order</h1>
+	<h1>.. guard the argument order</h1>
 
 	<br>
 	<div class="compass">
@@ -47,9 +47,11 @@
 	</div>
 
 	<aside class="notes">
-		Guard argument order like Compass<br>
-		The point there are many controls that we have available to us in our mixins<br>
-		so why don't we use them more?
+		Guard the argument order like Compass do<br>
+		<br>
+		And the point is that there are many logic controls <br>
+		that we have available to us<br>
+		so <u>we should</u> use them more
 	</aside>
 </section>
 
