--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -2,8 +2,8 @@
 	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap</h1>
 
 	<aside class="notes">
-		Another one that took me a while to figure out<br>
-		Mixin libraries are cheap!
+		One that took me a while to figure out<br>
+		<strong>Mixin libraries are cheap!</strong>
 	</aside>
 </section>
 
@@ -13,7 +13,9 @@
 	</div>
 
 	<aside class="notes">
-		They don't output any CSS. So you can have as many Mixins as you like and unless you use them they won't have an impact on performance
+		They don't output any CSS. <br>
+		So you can have as many Mixins as you like <br>
+		and unless you use them they won't have an impact on performance
 	</aside>
 </section>
 
@@ -22,7 +24,7 @@
 	<h1>.. or optionally output CSS</h1>
 
 	<aside class="notes">
-		Or some Frameworks provide an option to generate CSS or not like Foundation
+		Or some Frameworks like Foundation provide this as an option
 	</aside>
 </section>
 
@@ -33,6 +35,6 @@
 	</div>
 
 	<aside class="notes">
-		Foundation use a Boolean switch called "include-html" so we can control what is compiled.
+		They use a simple Boolean switch called "include-html" so the developer can control the output
 	</aside>
 </section>
