another revision of speech notes

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">1.</span> Grammar proof your selectors.</h1>
 
 	<aside class="notes">
-		1. Grammar proof your selectors
+		first up. Grammar proof your selectors
 	</aside>
 </section>
 
@@ -20,10 +20,10 @@
 	</div>
 
 	<aside class="notes">
-		We all know the pain of debugging typos in selectors<br>
+		We all know the bitter pain of debugging typos<br>
 		This happens amazingly frequently!  particularly with strange words like 'grey'<br>
 		So, when you’re writing selectors,<strong style="color:green"> [NEXT]</strong><br>
-		<strong>Grammar proof your selectors ! like Inuit</strong><br>
+		<strong>Grammar proof your selectors ! like Inuit.css</strong><br>
 		And now it's ok if a developer misspells the 'gray' class
 	</aside>
 </section>
