--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -2,8 +2,8 @@
 	<h1><span class="sol-yellow">5.</span> Document inline.</h1>
 
 	<aside class="notes">
-		5. Document inline<br>
-		And as our code gets more complex, this is more and more important<br>
+		Five. Document inline<br>
+		Because as our code gets more complex, this is more and more important<br>
 	</aside>
 </section>
 
@@ -38,8 +38,8 @@
 
 	<aside class="notes">
 		Bootstrap have <em>particularly</em> good commenting<br>
-		They explain things that we need to know like the value IS <em>intentionally unitless</em><br>
-		and how the values was evaluated
+		They explain things that we need to know like that a value is <em>intentionally unitless</em><br>
+		and how the value was evaluated
 	</aside>
 </section>
 
@@ -59,7 +59,8 @@
 	</div>
 
 	<aside class="notes">
-		Inuit also draws pictures to convey useful information<br>
+		Inuit also use pictures to convey useful information<br>
+		<br>
 		so we should too
 	</aside>
 </section>
