--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">3.</span> Use objects for configs.</h1>
 
 	<aside class="notes">
-		3. Use objects for configs.
+		Three. Use objects for configs.
 	</aside>
 </section>
 
@@ -21,14 +21,12 @@
 
 
 	<aside class="notes">
-		Another thing that annoyed me about Sass<br>
+		Something that annoyed me about Sass<br>
 		was the unorganised key-value mess that the config file becomes<br>
-		<br>
-		I wanted to write Sass configs with an Object syntax like we might do in JavaScript <br>
-		<br>
-		Well <strong><u>you can</u> use objects for configs like Toolkit do</strong> <strong  style="color:green"> [NEXT]</strong><br>
+		I always wanted to write Sass configs with an Object syntax like we might do in JavaScript <br>
+		Well <strong><u>you can</u> use objects for configs<strong  style="color:green"> [NEXT]</strong></strong>. Toolkit do <br>
 		in Sass 3.3 we have maps, which are Objects.<br>
-		And now that our config is an Object <strong  style="color:green"> [NEXT]</strong><br>
+		...And now that our config is an Object <strong  style="color:green"> [NEXT]</strong><br>
 	</aside>
 
 
