--- a/src/templates/slides/intro.hbs
+++ b/src/templates/slides/intro.hbs
@@ -2,10 +2,8 @@
 
 <aside class="notes">
 	Developers historically don't like CSS<br>
-	But Preprocessors like Sass are a great opportunity for us to change the way people think about CSS<br>
-	<br>
-	And the best way to do that is to use more of the features of the Language<br>
-	And like all other languages, we should look in to the Source Code of our Plugins and Frameworks for best practices, tips and tricks<br>
-	<br>
+	But Preprocessors like Sass are a great opportunity for us to change that opinion<br>
+	And one of the best ways to do that is to use more of the features of the Language<br>
+	And one of the best ways <em>to learn</em> is to read the Source Code of our Plugins and Frameworks to find best practices, tips and tricks<br>
 	And these are some that i've found.
 </aside>
