--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">4.</span> Use lots of Sass Partials.</h1>
 
 	<aside class="notes">
-		4. Use lots of Sass Partials.<br>
+		Four. Use lots of Sass Partials.<br>
 		This is something that goes without saying. But so many developers just don't do this.
 	</aside>
 </section>
