--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		One that took me a while to figure out<br>
-		<strong>Mixin libraries are cheap!</strong>
+		<strong>Mixin libraries are cheap!</strong><strong style="color:green"> [NEXT]</strong>
 	</aside>
 </section>
 
@@ -13,9 +13,9 @@
 	</div>
 
 	<aside class="notes">
-		They don't output any CSS. <br>
+		A mixin library doesn't output any CSS. <br>
 		So you can have as many Mixins as you like <br>
-		and unless you use them they won't have an impact on performance
+		and unless you use them they won't have an impact on performance<strong style="color:green"> [NEXT]</strong>
 	</aside>
 </section>
 
@@ -24,7 +24,7 @@
 	<h1>.. or optionally output CSS</h1>
 
 	<aside class="notes">
-		Or some Frameworks like Foundation provide this as an option
+		Or some Frameworks like Foundation provide this as an option<strong style="color:green"> [NEXT]</strong>
 	</aside>
 </section>
 
@@ -35,6 +35,7 @@
 	</div>
 
 	<aside class="notes">
-		They use a simple Boolean switch called "include-html" so the developer can control the output
+		Foundation use a simple Boolean switch called "include-html"
 	</aside>
 </section>
+
