--- a/src/templates/slides/twenty.hbs
+++ b/src/templates/slides/twenty.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">10.</span> Throw errors.</h1>
 
 	<aside class="notes">
-		10. Throw errors
+		Ten. Throw errors
 	</aside>
 </section>
 
