--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -18,7 +18,7 @@
 
 	<aside class="notes">
 		you can check for empty arguments with the length function like Toolkit do,<br>
-		then you might do something like setting a default value for this condition or emitting a warning
+		then you could do something with that condition like setting a default value or emitting a warning
 	</aside>
 </section>
 
@@ -49,7 +49,7 @@
 	<aside class="notes">
 		Guard the argument order like Compass do<br>
 		<br>
-		And the point is that there are many logic controls <br>
+		And my point is that there are many logic controls <br>
 		that we have available to us<br>
 		so <u>we should</u> use them more
 	</aside>
