--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">7.</span> Use a debug flag.</h1>
 
 	<aside class="notes">
-		7. Use a debug flag.
+		Seven. Use a debug flag.
 	</aside>
 </section>
 
@@ -24,14 +24,11 @@
 	</div>
 
 	<aside class="notes">
-		Inuit a variable called $debug-mode and by setting this to true,<br>
-		It executes the contents of a file called debug<br>
-		the file is used to paint useful things in browser like outlining elements without alt tags<br>
-		<br>
+		Inuit have a variable called $debug-mode and by setting this to true,<br>
+		It executes the contents of a non-related file called debug<br>
+		and this file is used to paint useful things in browser like outlining image elements without alt tags<br>
 		<br>
 		So we could use a debug concept in our code as well<strong  style="color:green"> [NEXT]</strong>
 		Maybe it would be a useful way of debugging layout elements<br>
-		You could use it in a ternary function for example
 	</aside>
-
 </section>
