--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">2.</span> You can chain import statements.</h1>
 
 	<aside class="notes">
-		2.  You can chain import statements.
+		Two.  You can chain import statements.
 	</aside>
 </section>
 
@@ -29,8 +29,8 @@
 
 
 	<aside class="notes">
-		Something always felt wrong about repeating the @import directive.<strong  style="color:green"> [NEXT]</strong><br>
-		We chain JavaScript variables, so why can't we chain import statements? <strong  style="color:green"> [NEXT]</strong><br>
-		well it turns out <strong>you can chain import statements !</strong>, Foundation do this<br>
+		<em>For me</em>, something always felt wrong about repeating the @import directive.<br>
+		We chain JavaScript variables <strong  style="color:green"> [NEXT]</strong>, so why can't we chain import statements?<br>
+		well it turns out <strong><u>you can</u><strong  style="color:green"> [NEXT]</strong> chain import statements !</strong>, Foundation do this<br>
 	</aside>
 </section>
