speech final touches

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -27,4 +27,5 @@
 	, 'components/slides/twenty-one'
 	, 'components/slides/five'
 	, 'components/slides/sixteen'
+	, 'components/slides/twenty-two'
 ;
