--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -33,9 +33,9 @@
 		<section class="slide two">
 			{{> two }}
 		</section>
-		<section class="slide twenty">
-			{{> twenty }}
-		</section>
+		<!--<section class="slide twenty">-->
+			<!--{{> twenty }}-->
+		<!--</section>-->
 		<section class="slide twenty-two">
 			{{> twenty-two }}
 		</section>
