--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">1.</span> Grammar proof your selectors.</h1>
 
 	<aside class="notes">
-		first up. Grammar proof your selectors
+		first up. Grammar proof your selectors<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -20,12 +20,10 @@
 	</div>
 
 	<aside class="notes">
-		We all know the bitter pain of debugging typos<br>
+		We've all felt the pain of debugging typos<br>
 		This happens amazingly frequently!  particularly with strange words like 'grey'<br>
-		So, when you’re writing selectors,<strong style="color:green"> [NEXT]</strong><br>
+		So, when you’re writing selectors,<strong style="color:green"> [DOWN]</strong><br>
 		<strong>Grammar proof your selectors ! like Inuit.css</strong><br>
-		And now it's ok if a developer misspells the 'gray' class
+		And now it's ok if a developer misspells the 'gray' class<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
-
-
