--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		Five. Document inline<br>
-		Because as our code gets more complex, this is more and more important<br>
+		As our code gets more complex, this is more and more important<strong  style="color:green"> [DOWN]</strong><br>
 	</aside>
 </section>
 
@@ -24,9 +24,9 @@
 	</div>
 
 	<aside class="notes">
-		CSS is notorious for comments that point out the obvious<strong  style="color:green"> [NEXT]</strong><br>
-		or a general lack of commenting and bad naming conventions<strong  style="color:green"> [NEXT]</strong><br>
-		or comments that are starting to be helpful but don't convey any semantics<strong  style="color:green"> [NEXT]</strong><br>
+		CSS is notorious for comments that point out the obvious<strong  style="color:green"> [DOWN]</strong><br>
+		or a general lack of commenting and bad naming conventions<strong  style="color:green"> [DOWN]</strong><br>
+		or comments that are starting to be helpful but don't convey any semantics<strong  style="color:green"> [DOWN]</strong><br>
 	</aside>
 </section>
 
@@ -37,9 +37,9 @@
 	</div>
 
 	<aside class="notes">
-		Bootstrap have <em>particularly</em> good commenting<br>
+		Bootstrap however, have <em>particularly</em> good commenting<br>
 		They explain things that we need to know like that a value is <em>intentionally unitless</em><br>
-		and how the value was evaluated
+		and how the value was evaluated<strong  style="color:green"> [DOWN]</strong>v
 	</aside>
 </section>
 
@@ -49,7 +49,7 @@
 	</div>
 
 	<aside class="notes">
-		Inuit use html snippets in their doc-blocks to explain some of the semantics of classes
+		Inuit use html snippets in their commenting to explain some of their class's semantics
 	</aside>
 </section>
 
@@ -59,8 +59,8 @@
 	</div>
 
 	<aside class="notes">
-		Inuit also use pictures to convey useful information<br>
+		And Inuit also use pictures to convey useful information<br>
 		<br>
-		so we should too
+		so we should too<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
