--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">7.</span> Use a debug flag.</h1>
 
 	<aside class="notes">
-		Seven. Use a debug flag.
+		Seven. Use a debug flag.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -25,10 +25,9 @@
 
 	<aside class="notes">
 		Inuit have a variable called $debug-mode and by setting this to true,<br>
-		It executes the contents of a non-related file called debug<br>
-		and this file is used to paint useful things in browser like outlining image elements without alt tags<br>
+		A partial called debug is executed, which paints useful things to the browser like outlining image elements without alt tags<br>
 		<br>
-		So we could use a debug concept in our code as well<strong  style="color:green"> [NEXT]</strong>
-		Maybe it would be a useful way of debugging layout elements<br>
+		So we could use a debug concept in our code as well<strong  style="color:green"> [DOWN]</strong>
+		Maybe it would be a useful way of debugging layout elements<strong style="color:#1e90ff">[RIGHT]</strong><br>
 	</aside>
 </section>
