--- a/src/templates/slides/splash.hbs
+++ b/src/templates/slides/splash.hbs
@@ -7,3 +7,9 @@
 <!--<img src="{{ SP.DIR_IMAGES }}/ionic-logo.png">-->
 <!--<img src="{{ SP.DIR_IMAGES }}/team-sass-logo.png">-->
 <!--<img src="{{ SP.DIR_IMAGES }}/zurb-logo.png">-->
+
+
+<aside class="notes">
+	Ok, hi everybody.<br>
+	Today I am going to talk about Sass.<strong style="color:#1e90ff">[RIGHT]</strong>
+</aside>
