--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		One that took me a while to figure out<br>
-		<strong>Mixin libraries are cheap!</strong><strong style="color:green"> [NEXT]</strong>
+		<strong>Mixin libraries are cheap!</strong><strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -15,7 +15,7 @@
 	<aside class="notes">
 		A mixin library doesn't output any CSS. <br>
 		So you can have as many Mixins as you like <br>
-		and unless you use them they won't have an impact on performance<strong style="color:green"> [NEXT]</strong>
+		and unless you use them they won't be sent to the browser<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -24,7 +24,7 @@
 	<h1>.. or optionally output CSS</h1>
 
 	<aside class="notes">
-		Or some Frameworks like Foundation provide this as an option<strong style="color:green"> [NEXT]</strong>
+		Or some Frameworks like Foundation make this optional<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -35,7 +35,8 @@
 	</div>
 
 	<aside class="notes">
-		Foundation use a simple Boolean switch called "include-html"
+		Foundation use a simple Boolean switch called "include-html"<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
+
 
