--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,8 +1,8 @@
 <section>
-	<h1><span class="sol-yellow">10½. </span> Don't be too serious.</h1>
+	<h1><span class="sol-yellow">10. </span> Don't be too serious.</h1>
 
 	<aside class="notes">
-		10 and a half. Dont be too serious.
+		Ten. Dont be too serious.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -16,13 +16,13 @@
 		</div>
 
 		<div class="second fragment" data-fragment-index="1">
-			<img src="{{ SP.DIR_IMAGES }}/twenty-two-mine.jpg" height="" width="750">
+			<img src="{{ SP.DIR_IMAGES }}/twenty-two-comments-mine.jpg" height="" width="750">
 		</div>
 	</div>
 
 
 	<aside class="notes">
-		At the end of the day, we're CSS devs and we still like to have fun<strong style="color:green"> [NEXT]</strong><br><br>
-		And remember that most things get stripped out in the compile so you probably wont get fired.
+		We're CSS devs and we still like to have fun<strong style="color:green"> [DOWN]</strong><br><br>
+		Remember that most things get stripped out in the compile so you probably wont get fired.<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
