--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		If you code is going to be reusable, you need to be <br>
-		Guarding your arguments
+		Guarding your arguments<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -18,7 +18,7 @@
 
 	<aside class="notes">
 		you can check for empty arguments with the length function like Toolkit do,<br>
-		then you could do something with that condition like setting a default value or emitting a warning
+		now you can do something with that condition like setting a default value or emitting a warning<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -33,7 +33,7 @@
 
 	<aside class="notes">
 		Predefine optional arguments with null<br>
-		this could be a good way of turning off a feature in your mixin
+		this could be a good way of turning off a feature in your mixin<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -47,11 +47,11 @@
 	</div>
 
 	<aside class="notes">
-		Guard the argument order like Compass do<br>
+		or you can guard against argument order like Compass do<br>
 		<br>
-		And my point is that there are many logic controls <br>
+		And the point is that there are many logic controls <br>
 		that we have available to us<br>
-		so <u>we should</u> use them more
+		so <u>we should</u> use them more<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
 
