--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">3.</span> Use objects for configs.</h1>
 
 	<aside class="notes">
-		Three. Use objects for configs.
+		Three. Use objects for configs.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -21,16 +21,12 @@
 
 
 	<aside class="notes">
-		Something that annoyed me about Sass<br>
-		was the unorganised key-value mess that the config file becomes<br>
-		I always wanted to write Sass configs with an Object syntax like we might do in JavaScript <br>
-		Well <strong><u>you can</u> use objects for configs<strong  style="color:green"> [NEXT]</strong></strong>. Toolkit do <br>
-		in Sass 3.3 we have maps, which are Objects.<br>
-		...And now that our config is an Object <strong  style="color:green"> [NEXT]</strong><br>
+		Something that annoyed me about Sass was the unorganised mess that the config file becomes<br>
+		<br>
+		And I always wanted to write Sass configs with an Object syntax like we might do in JavaScript <strong  style="color:green"> [DOWN]</strong><br><br>
+		Well it turns out in Sass 3.3 <strong><u>you can</u> use objects for configs</strong>. Toolkit do <br>
+		...And now that our config is an Object <strong  style="color:green"> [DOWN]</strong><br>
 	</aside>
-
-
-
 </section>
 
 <section>
@@ -51,7 +47,7 @@
 	</div>
 
 	<aside class="notes">
-		we can create getter and setter methods to read and write to them just like Toolkit do<br>
+		we can build our own getter and setter methods to read and write to them just like Toolkit do<strong style="color:#1e90ff">[RIGHT]</strong><br>
 	</aside>
 </section>
 
