--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow inline-block">8.</span> <span class="inline-block">Format your mixin parameters<br>so they are <em>easy</em> to read.</span></h1>
 
 	<aside class="notes">
-		Eight. Format your mixin parameters so they are easy to read.
+		Eight. Format your mixin parameters so they are easy to read.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -22,7 +22,7 @@
 
 	<aside class="notes">
 		Don't write mixin parameters on one line<br>
-		and use lots of white space between them <strong  style="color:green"> [NEXT]</strong><br>
-		so people can quickly read them like Compass do.
+		and use lots of white space between them <strong  style="color:green"> [DOWN]</strong><br>
+		Format your mixin parameters like Compass do. people can quickly read them like this <strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
