--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,8 +1,8 @@
 <section>
-	<h1><span class="sol-yellow">2.</span> You can chain import statements.</h1>
+	<h1><span class="sol-yellow">2.</span> Chain import statements.</h1>
 
 	<aside class="notes">
-		Two.  You can chain import statements.
+		Two.  You can chain import statements.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -30,7 +30,7 @@
 
 	<aside class="notes">
 		<em>For me</em>, something always felt wrong about repeating the @import directive.<br>
-		We chain JavaScript variables <strong  style="color:green"> [NEXT]</strong>, so why can't we chain import statements?<br>
-		well it turns out <strong><u>you can</u><strong  style="color:green"> [NEXT]</strong> chain import statements !</strong>, Foundation do this<br>
+		We chain JavaScript variables <strong  style="color:green"> [DOWN]</strong>, so why can't we chain import statements?<br>
+		well it turns out <strong><u>you can</u><strong  style="color:green"> [DOWN]</strong> chain import statements !</strong>, Foundation do this<br>
 	</aside>
 </section>
