--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -3,7 +3,7 @@
 
 	<aside class="notes">
 		Four. Use lots of Sass Partials.<br>
-		This is something that goes without saying. But so many developers just don't do this.
+		This is something that goes without saying. But so many developers just don't do this.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -40,10 +40,10 @@
 
 
 	<aside class="notes">
-		Foundation do<strong  style="color:green"> [NEXT]</strong><br>
-		Bootstrap do<strong  style="color:green"> [NEXT]</strong><br>
-		Compass does<strong  style="color:green"> [NEXT]</strong><br>
-		Actually everyone does, so we should too<strong  style="color:green"> [NEXT]</strong><br>
+		Foundation do<strong  style="color:green"> [DOWN]</strong><br>
+		Bootstrap do<strong  style="color:green"> [DOWN]</strong><br>
+		Compass does<strong  style="color:green"> [DOWN]</strong><br>
+		Actually everyone does, so we should too<strong style="color:#1e90ff">[RIGHT]</strong><br>
 	</aside>
 
 </section>
