--- a/src/templates/slides/twenty.hbs
+++ b/src/templates/slides/twenty.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">10.</span> Throw errors.</h1>
 
 	<aside class="notes">
-		Ten. Throw errors
+		Ten. Throw errors<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -24,7 +24,7 @@
 	<aside class="notes">
 		Bourbon use errors to give deprecating warnings<br><br>
 		Sassy-math use errors to emit type warnings <br>
-		and then use a @return false to exit the function.
+		and then use a @return false to exit the function.<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 
 </section>
