finished the fucking thing again

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -20,10 +20,10 @@
 	</div>
 
 	<aside class="notes">
-		We've all felt the pain of debugging typos<br>
+		Now we've all felt the pain of debugging typos<br>
 		This happens amazingly frequently!  particularly with strange words like 'grey'<br>
 		So, when you’re writing selectors,<strong style="color:green"> [DOWN]</strong><br>
-		<strong>Grammar proof your selectors ! like Inuit.css</strong><br>
+		<strong>Grammar proof your selectors ! like Inuit.css do</strong><br>
 		And now it's ok if a developer misspells the 'gray' class<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
