--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">10. </span> Don't be too serious.</h1>
 
 	<aside class="notes">
-		Ten. Dont be too serious.<strong style="color:green"> [DOWN]</strong>
+		Ten. and this is the last poinyt, Dont be too serious.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
@@ -23,6 +23,6 @@
 
 	<aside class="notes">
 		We're CSS devs and we still like to have fun<strong style="color:green"> [DOWN]</strong><br><br>
-		Remember that most things get stripped out in the compile so you probably wont get fired.<strong style="color:#1e90ff">[RIGHT]</strong>
+		And remember that most things get stripped out in the compile so you probably wont get fired.<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
