edit speech text AGAIN

--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -59,8 +59,8 @@
 	</div>
 
 	<aside class="notes">
-		And Inuit also use pictures to convey useful information<br>
+		Inuit also use picture comments to convey useful information<br>
 		<br>
-		so we should too<strong style="color:#1e90ff">[RIGHT]</strong>
+		so we can too<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
