--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -25,9 +25,9 @@
 
 	<aside class="notes">
 		Inuit have a variable called $debug-mode and by setting this to true,<br>
-		A partial called debug is executed, which paints useful things to the browser like outlining image elements without alt tags<br>
+		A partial called debug is executed, which paints useful things to the browser like outlining image elements that are missing alt tags<br>
 		<br>
-		So we could use a debug concept in our code as well<strong  style="color:green"> [DOWN]</strong>
+		So we could use a debug concept in our code as well<strong  style="color:green"> [DOWN]</strong><br>
 		Maybe it would be a useful way of debugging layout elements<strong style="color:#1e90ff">[RIGHT]</strong><br>
 	</aside>
 </section>
