--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -31,6 +31,6 @@
 	<aside class="notes">
 		<em>For me</em>, something always felt wrong about repeating the @import directive.<br>
 		We chain JavaScript variables <strong  style="color:green"> [DOWN]</strong>, so why can't we chain import statements?<br>
-		well it turns out <strong><u>you can</u><strong  style="color:green"> [DOWN]</strong> chain import statements !</strong>, Foundation do this<br>
+		well it turns out <strong><u>you can !</u><strong  style="color:green"> [DOWN]</strong> </strong>, Foundation do this<br>
 	</aside>
 </section>
