--- a/src/templates/slides/splash.hbs
+++ b/src/templates/slides/splash.hbs
@@ -11,5 +11,5 @@
 
 <aside class="notes">
 	Ok, hi everybody.<br>
-	Today I am going to talk about Sass.<strong style="color:#1e90ff">[RIGHT]</strong>
+	Today I am going to talk about Things I've Learned From Sass Plugins.<strong style="color:#1e90ff">[RIGHT]</strong>
 </aside>
