--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -18,7 +18,7 @@
 
 	<aside class="notes">
 		you can check for empty arguments with the length function like Toolkit do,<br>
-		now you can do something with that condition like setting a default value or emitting a warning<strong style="color:green"> [DOWN]</strong>
+		and now you can do something with that condition like setting a default value or emitting a warning<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
