--- a/src/templates/slides/intro.hbs
+++ b/src/templates/slides/intro.hbs
@@ -2,7 +2,7 @@
 
 <aside class="notes">
 	<strong style="color:orange">[PAUSE]</strong> ...Historically developers don't like CSS<br>
-	But Preprocessors like Sass are a great opportunity for us to change that opinion<br>
+	But Preprocessors like Sass are a great opportunity for us to disrupt that opinion<br>
 	And one of the best ways to do that is to use more of the features of the Language<br>
 	And one of the best ways <em>to learn</em> is to read the Source Code of our Plugins and Frameworks to find some of those best practices, tips and tricks<br>
 	And these are some that i've found.<strong style="color:#1e90ff">[RIGHT]</strong>
