--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -21,8 +21,8 @@
 	</div>
 
 	<aside class="notes">
-		Don't write mixin parameters on one line<br>
-		and use lots of white space between them <strong  style="color:green"> [DOWN]</strong><br>
-		Format your mixin parameters like Compass do. people can quickly read them like this <strong style="color:#1e90ff">[RIGHT]</strong>
+		Don't write mixin parameters on one line and use lots of white space between them <strong  style="color:green"> [DOWN]</strong><br>
+		Format your mixin parameters like Compass do. <br>
+		so that people can quickly read them <strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
