last minute speech tweaks

--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -23,8 +23,8 @@
 	<aside class="notes">
 		Something that annoyed me about Sass was the unorganised mess that the config file becomes<br>
 		<br>
-		And I always wanted to write Sass configs with an Object syntax like we might do in JavaScript <strong  style="color:green"> [DOWN]</strong><br><br>
-		Well it turns out in Sass 3.3 <strong><u>you can</u> use objects for configs</strong>. Toolkit do <br>
+		And I always wanted to write Sass configs with an Object syntax like we might do in JavaScript<br><br>
+		<strong  style="color:green"> [DOWN]</strong> Well it turns out in Sass 3.3 <strong><u>you can</u> use objects for configs</strong>. Toolkit do <br>
 		...And now that our config is an Object <strong  style="color:green"> [DOWN]</strong><br>
 	</aside>
 </section>
