--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -22,7 +22,7 @@
 
 	<aside class="notes">
 		Don't write mixin parameters on one line and use lots of white space between them <strong  style="color:green"> [DOWN]</strong><br>
-		Format your mixin parameters like Compass do. <br>
-		so that people can quickly read them <strong style="color:#1e90ff">[RIGHT]</strong>
+		Format them like Compass do. <br>
+		so that people can read them really quickly <strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
