--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -35,7 +35,7 @@
 	</div>
 
 	<aside class="notes">
-		Foundation use a simple Boolean switch called "include-html"<strong style="color:#1e90ff">[RIGHT]</strong>
+		Foundation have a simple Boolean switch called "include-html" to handle this <strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
 </section>
 
