--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -2,7 +2,8 @@
 	<h1><span class="sol-yellow">10. </span> Don't be too serious.</h1>
 
 	<aside class="notes">
-		Ten. and this is my last point today, Dont be too serious.<strong style="color:green"> [DOWN]</strong>
+		Ten. and this is my last point today, <br>
+		Dont be too serious.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
