--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -2,7 +2,7 @@
 	<h1><span class="sol-yellow">9.</span> Guard arguments</h1>
 
 	<aside class="notes">
-		If you code is going to be reusable, you need to be <br>
+		Nine. If you code is going to be reusable, you need to be <br>
 		Guarding your arguments<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
@@ -32,7 +32,7 @@
 	</div>
 
 	<aside class="notes">
-		Predefine optional arguments with null<br>
+		you can Predefine optional arguments with null<br>
 		this could be a good way of turning off a feature in your mixin<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
@@ -49,7 +49,7 @@
 	<aside class="notes">
 		or you can guard against argument order like Compass do<br>
 		<br>
-		And the point is that there are many logic controls <br>
+		And the point really is that there are many logic controls <br>
 		that we have available to us<br>
 		so <u>we should</u> use them more<strong style="color:#1e90ff">[RIGHT]</strong>
 	</aside>
