--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -39,7 +39,7 @@
 	<aside class="notes">
 		Bootstrap however, have <em>particularly</em> good commenting<br>
 		They explain things that we need to know like that a value is <em>intentionally unitless</em><br>
-		and how the value was evaluated<strong  style="color:green"> [DOWN]</strong>v
+		and how the value was evaluated<strong  style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
 
