--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -42,7 +42,7 @@
 	<aside class="notes">
 		Foundation do<strong  style="color:green"> [DOWN]</strong><br>
 		Bootstrap do<strong  style="color:green"> [DOWN]</strong><br>
-		Compass does<strong  style="color:green"> [DOWN]</strong><br>
+		Compass do<strong  style="color:green"> [DOWN]</strong><br>
 		Actually everyone does, so we should too<strong style="color:#1e90ff">[RIGHT]</strong><br>
 	</aside>
 
