--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -1,8 +1,8 @@
 <section>
-	<h1><span class="sol-yellow">4.</span> Use lots of Sass Partials.</h1>
+	<h1><span class="sol-yellow">4.</span> Use <em>lots</em> of Sass Partials.</h1>
 
 	<aside class="notes">
-		Four. Use lots of Sass Partials.<br>
+		Four. Use <em>lots</em> of Sass Partials.<br>
 		This is something that goes without saying. But so many developers just don't do this.<strong style="color:green"> [DOWN]</strong>
 	</aside>
 </section>
